Update graph interface and tests